# test_opengl

./: .gitignore  CMakeLists.txt  main.cpp
include/renderer/: Mesh.hpp  Shader.hpp
resources/shaders/: triangle.vert
shaders/: color1.frag  triangle.vert
src/: main.cpp
src/builders/: camera.h  shader.h
src/core/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/game/: Food.cpp  Food.hpp  Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  Snake.cpp  Snake.hpp
src/input/: InputManager.cpp  InputManager.hpp
src/renderer/: Mesh.cpp  Shader.cpp
src/shader/: color1.frag  color2.frag  triangle.vert
